<?xml version="1.0"?>
<package format="2">
  <name>grvc_ef_tracker</name>
  <version>1.0.0</version>
  <description>The grvc_ef_tracker package</description>

  <maintainer email="jrodriguezg@tus.es">Juan</maintainer>
  <author>Juan Pablo Rodriguez Gomez</author>
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dvs_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>dvs_msgs</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>rospp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>dvs_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
